Change css to avoid overlap in laptop

--- a/css/index.css
+++ b/css/index.css
@@ -500,7 +500,7 @@ div>#copy-last-selected:active{margin-top:3px}
 100%{transform:rotateY(-90deg)}
 }
 .n:nth-of-type(30){-webkit-animation:animate_30 30s ease-in-out infinite;animation:animate_30 30s ease-in-out infinite}
-#overlay svg{display:flex;margin:auto;width:100vw;height:100%;justify-content:center;align-items:center}
+#overlay svg{display:flex;margin:auto;width:100%;height:100%;justify-content:center;align-items:center}
 g{justify-content:center;align-items:center}
 g>text{text-anchor:middle;font-size:400px;font-family:Overpass Mono,monospace;fill:hsla(210,100%,75%,.85);opacity:0;-webkit-animation-name:opac;animation-name:opac;-webkit-animation-duration:4s;animation-duration:4s;-webkit-animation-timing-function:linear;animation-timing-function:linear;-webkit-animation-iteration-count:1;animation-iteration-count:1}
 g>text:nth-child(1){-webkit-animation-delay:0s;animation-delay:0s}
